--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "sass-loader": "^8.0.0"
     },
     "dependencies": {
-        "@mdi/font": "^5.9.55"
+        "@mdi/font": "^5.9.55",
+        "inputmask": "^5.0.5"
     }
 }
