--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {
         "@mdi/font": "^5.9.55",
-        "inputmask": "^5.0.5"
+        "inputmask": "^5.0.5",
+        "sweetalert": "^2.1.2"
     }
 }
