--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dependencies": {
         "@mdi/font": "^5.9.55",
         "inputmask": "^5.0.5",
-        "sweetalert": "^2.1.2"
+        "sweetalert": "^2.1.2",
+        "sweetalert2": "^10.15.6"
     }
 }
